fixed global reviews uisref route

--- a/website/app/application/core/reviews/global-reviews.html
+++ b/website/app/application/core/reviews/global-reviews.html
@@ -9,8 +9,7 @@
             <th></th>
         </thead>
         <tbody>
-            <tr ui-sref="projects.project.reviews.edit({review_id: r.id, id: r.project_id,
-            status: r.status})" ng-repeat="r in reviews | byKey:'status':'open' | byKey: 'author': user">
+            <tr ui-sref="projects.project.home({id: r.project_id})" ng-repeat="r in reviews | byKey:'status':'open' | byKey: 'author': user">
                 <td data-toggle="tooltip" title="{{r.title}}">
                     {{createName(r.title)}}
                     <p class="text-muted"
@@ -41,7 +40,7 @@
             <th></th>
         </thead>
         <tbody>
-            <tr ui-sref="projects.project.reviews.edit({review_id: r.id, id: r.project_id, status: r.status})"
+            <tr ui-sref="projects.project.home({id: r.project_id})"
                 ng-repeat="r in reviews | byKey: 'assigned_to': user| byKey: 'status': 'open'">
                 <td data-toggle="tooltip"
                     title="{{r.title}}">
