Issue-626-global reviews not redirected to correct page

--- a/website/app/application/directives/mc-tree-header.html
+++ b/website/app/application/directives/mc-tree-header.html
@@ -44,7 +44,7 @@
             {{::item.birthtime | toDateString}}
         </small>
         <small class="text-muted">
-            {{::item.fullname}}
+            <!--{{::item.fullname}}-->
         </small>
     </p>
     <p>
