Issue-643-ui refinements

--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -14,10 +14,10 @@
                     <breadcrumbs project="project"></breadcrumbs>
                 </div>
                 <div class="pull-right" style="margin-right: 20px;">
-                    <span style="color:#333;font-family: Helvetica;font-size: 16px;">
+                    <span style="color:grey;font-family: Helvetica;font-size: 16px;">
                         Welcome {{mcuser.fullname}}
                     </span>
-                    <small>
+                    <small style="color: grey">
                         (Last login on <a ui-sref="projects.project.home"> {{mcuser.last_login | toDateString}} </a>)
                     </small>
                 </div>
