--- a/website/app/application/core/projects/project/home/directives/home-calendar.html
+++ b/website/app/application/core/projects/project/home/directives/home-calendar.html
@@ -5,6 +5,13 @@
             <button class="btn btn-success" ng-click="changeView('agendaWeek', 'myCalendar')">Week</button>
             <button class="btn btn-success" ng-click="changeView('month', 'myCalendar')">Month</button>
         </div>
+        <div   ng-if="message" class="pull-right alert alert-danger alert-dismissible fade in" role="alert">
+            <button class="close" aria-label="Close" data-dismiss="alert" type="button">
+                <span aria-hidden="true">×</span>
+            </button>
+            <strong>{{message}}</strong>
+        </div>
+
     </div>
     <div style="padding-bottom: 16px;" ui-calendar="uiConfig.calendar" calendar="myCalendar" ng-model="eventSources"></div>
 </div>
