--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -2,7 +2,7 @@
     <div class="panel-heading samples-color home-panel-heading">
         <i class="fa fa-fw fa-cubes bold"></i>
         <span>
-            <a ui-sref="projects.project.samples.overview">Samples</a>
+         Samples
             ({{samples.length}})
         </span>
         <span class="pull-right bar-control">
