--- a/website/app/application/core/projects/project/home/directives/home-calendar.html
+++ b/website/app/application/core/projects/project/home/directives/home-calendar.html
@@ -1,6 +1,6 @@
 <div>
-    <div class="alert-danger calAlert" ng-show="alertMessage != undefined && alertMessage != ''">
-        <h4>{{alertMessage}}</h4>
+    <div  ng-show="alertMessage != undefined && alertMessage != ''">
+        <alert close="closeAlert()">{{alertMessage}}</alert>
     </div>
     <div class="btn-toolbar">
         <div class="btn-group">
