Fix showing the file is uploaded. Add Refresh to reload the directory tree.

--- a/website/app/application/core/projects/project/home/directives/display-file-upload-entry.html
+++ b/website/app/application/core/projects/project/home/directives/display-file-upload-entry.html
@@ -6,7 +6,7 @@
     </span>
 
     <span class="pull-right">
-        <small ng-show="file.isCompleted()"
+        <small ng-show="file.isComplete()"
                class="panel-element mc-success">
             <strong>Uploaded</strong>
         </small>
