--- a/website/app/application/core/projects/project/home/directives/file-upload-panel.html
+++ b/website/app/application/core/projects/project/home/directives/file-upload-panel.html
@@ -17,7 +17,7 @@
                     Cancel All
                 </button>
             </span>
-            <h4 class="panel-element">Files to Upload:</h4>
+            <h4 class="panel-element">Files to upload:</h4>
         </li>
     </ul>
 
