--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -16,6 +16,9 @@
         </span>
         <input type="text" ng-model="searchInput" class="pull-right col-xs-4"
                placeholder="Search files...">
+        <a ng-click="reloadFiles()" class="pull-right bar-control-left">
+            <i class="fa fa-fw fa-refresh" ng-class="{'fa-spin': isReloading}"></i>
+        </a>
     </div>
     <div class="panel-body home-panel-body no-max-height">
         <file-upload-panel></file-upload-panel>
