--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -6,7 +6,7 @@
             </a>
             <a ng-click="showSideboard = !showSideboard">
                 <i class="fa fa-fw fa-2x fa-clipboard" ng-class="{inactive: !showSideboard}"></i>
-                <span class="badge badge-superscript-count">{{sideboard.length}}</span>
+                <span class="badge badge-superscript-count">{{list.sideboard.length}}</span>
             </a>
         </div>
     </div>
