--- a/website/app/application/core/projects/project/home/directives/display-process.html
+++ b/website/app/application/core/projects/project/home/directives/display-process.html
@@ -16,7 +16,7 @@
         <a ng-if="showSideboard"
            ng-click="addToSideboard(process, $event)"
            id="{{process.id}}">
-            <id class="fa fa-fw fa-clipboard inactive"></i>
+            <i class="fa fa-fw fa-clipboard inactive"></i>
         </a>
     </span>
     <p>
