--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,12 +1,57 @@
 <div>
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-sm-12">
             <a ng-click="showCalendar = !showCalendar">
                 <i class="fa fa-fw fa-2x fa-calendar" ng-class="{inactive: !showCalendar}"></i>
             </a>
             <a ng-click="showSideboard = !showSideboard">
                 <i class="fa fa-fw fa-2x fa-clipboard" ng-class="{inactive: !showSideboard}"></i>
                 <span class="badge badge-superscript-count">{{list.sideboard.length}}</span>
+            </a>
+            <a class="btn btn-default btn-reviews minimized-window"
+                    ng-show="isMinimized('reviews')"
+                    ng-click="openPanel('reviews')">
+                <span>
+                    <i class="fa fa-fw fa-comment bold"></i>
+                    Reviews ({{(project.reviews | byKey: 'status': 'open').length}})
+                    <i class="fa fa-fw fa-arrows-alt"></i>
+                </span>
+            </a>
+
+            <a class="btn btn-default btn-files minimized-window"
+                    ng-show="isMinimized('files')"
+                    ng-click="openPanel('files')">
+                <span>
+                    <i class="fa fa-fw fa-files-o bold"></i>
+                    Files
+                </span>
+            </a>
+
+            <a class="btn btn-default btn-samples minimized-window"
+                    ng-show="isMinimized('samples')"
+                    ng-click="openPanel('samples')">
+                <span>
+                    <i class="fa fa-fw fa-cubes bold"></i>
+                    Samples ({{project.samples.length}})
+                </span>
+            </a>
+
+            <a class="btn btn-default btn-notes minimized-window"
+                    ng-show="isMinimized('notes')"
+                    ng-click="openPanel('notes')">
+                <span>
+                    <i class="fa fa-fw fa-edit bold"></i>
+                    Notes ({{project.notes.length}})
+                </span>
+            </a>
+
+            <a class="btn btn-default btn-processes minimized-window"
+                    ng-show="isMinimized('processes')"
+                    ng-click="openPanel('processes')">
+                <span>
+                    <i class="fa fa-fw fa-code-fork bold"></i>
+                    Processes
+                </span>
             </a>
         </div>
     </div>
@@ -54,4 +99,3 @@
     </div>
 
 </div>
-
