Delete unused files and remove references.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -40,7 +40,7 @@
     <navbar></navbar>
 </div>
 <div>
-    <sidebar></sidebar>
+    <sidebar ng-show="false"></sidebar>
     <div class="main-content">
         <div class="row app-container">
             <div ui-view>
@@ -161,7 +161,6 @@
 <script src="application/core/machines/machines-controller.js"></script>
 
 <!-- Toolbar projects -->
-<script src="application/core/projects/projects-controller.js"></script>
 <script src="application/core/projects/directives/provenance/provenance-wizard-control-bar-directive.js"></script>
 <script src="application/core/projects/directives/provenance/show-provenance-template-steps.js"></script>
 <script src="application/core/projects/directives/provenance/wizard-step-overview.js"></script>
