Remove sidebar and move functionality over that was in the the sidebar.

--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -4,15 +4,36 @@
             <p><i class="fa fa-spinner fa-spin fa-4x"></i> Loading...</p>
         </div>
     </div>
-    <div ng-if="loaded" class="row">
-        <div ng-if="false">
-            <provenance-wizard-magic-bar></provenance-wizard-magic-bar>
-        </div>
-        <div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <breadcrumbs project="project"></breadcrumbs>
+    <div ng-if="loaded">
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="list-group sidebar-list" style="margin-left: 10px;">
+                    <div class="list-group-item sidebar-action" style="padding-top: 8px; padding-bottom: 8px">
+                        <a style="color: white" ng-click="showProjects = !showProjects">
+                            <i class="fa fa-fw fa-briefcase"></i> {{project.name | truncate: 40: '...'}}
+                            <i class="fa"
+                               ng-class="{'fa-chevron-right': !showProjects, 'fa-chevron-down': showProjects}"></i>
+                            <span class="pull-right white">{{projects.length}}</span>
+                        </a>
+
+                        <div ng-show="showProjects" style="overflow: auto; max-height: 300px;">
+                            <a class="list-group-item"
+                               data-toggle="modal"
+                               data-target="#newProject">
+                                <i class="fa fa-fw fa-plus"></i> New Project
+                            </a>
+                            <hr class="carved"/>
+                            <a class="list-group-item"
+                               ng-repeat="p in projects"
+                               ng-click="setProject(p)">
+                                {{p.name}}
+                            </a>
+                        </div>
+                    </div>
+                    <!-- <breadcrumbs project="project"></breadcrumbs> -->
                 </div>
+            </div>
+            <div class="col-xs-8">
                 <div class="pull-right" style="margin-right: 20px;">
                     <span style="color:grey;font-family: Helvetica;font-size: 16px;">
                         Welcome {{mcuser.fullname}}
@@ -22,13 +43,13 @@
                     </small>
                 </div>
             </div>
-            <div class="row">
-                <div ng-class="{'col-sm-12': isExpanded('help'), 'col-sm-4': !isExpanded('help') && showHelp()}" ng-show="showHelp()">
-                    <userguide></userguide>
-                </div>
-                <div ng-class="{'col-sm-8': showHelp(), 'col-sm-12': !showHelp()}" ng-show="!isExpanded('help')">
-                    <div ui-view></div>
-                </div>
+        </div>
+        <div class="row">
+            <div ng-class="{'col-sm-12': isExpanded('help'), 'col-sm-4': !isExpanded('help') && showHelp()}" ng-show="showHelp()">
+                <userguide></userguide>
+            </div>
+            <div ng-class="{'col-sm-8': showHelp(), 'col-sm-12': !showHelp()}" ng-show="!isExpanded('help')">
+                <div ui-view></div>
             </div>
         </div>
     </div>
