--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,6 +1,9 @@
 <div>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-xs-12">
+            <a ng-click="showSettings = !showSettings">
+                <i class="fa fa-fw fa-2x fa-gear" ng-class="{inactive: !showSettings}"></i>
+            </a>
             <a ng-click="showCalendar = !showCalendar">
                 <i class="fa fa-fw fa-2x fa-calendar" ng-class="{inactive: !showCalendar}"></i>
             </a>
@@ -8,9 +11,10 @@
                 <i class="fa fa-fw fa-2x fa-clipboard" ng-class="{inactive: !showSideboard}"></i>
                 <span class="badge badge-superscript-count">{{list.sideboard.length}}</span>
             </a>
+
             <a class="btn btn-default btn-reviews minimized-window"
-                    ng-show="isMinimized('reviews')"
-                    ng-click="openPanel('reviews')">
+               ng-show="isMinimized('reviews')"
+               ng-click="openPanel('reviews')">
                 <span>
                     <i class="fa fa-fw fa-comment bold"></i>
                     Reviews ({{(project.reviews | byKey: 'status': 'open').length}})
@@ -18,8 +22,8 @@
             </a>
 
             <a class="btn btn-default btn-files minimized-window"
-                    ng-show="isMinimized('files')"
-                    ng-click="openPanel('files')">
+               ng-show="isMinimized('files')"
+               ng-click="openPanel('files')">
                 <span>
                     <i class="fa fa-fw fa-files-o bold"></i>
                     Files
@@ -27,8 +31,8 @@
             </a>
 
             <a class="btn btn-default btn-samples minimized-window"
-                    ng-show="isMinimized('samples')"
-                    ng-click="openPanel('samples')">
+               ng-show="isMinimized('samples')"
+               ng-click="openPanel('samples')">
                 <span>
                     <i class="fa fa-fw fa-cubes bold"></i>
                     Samples ({{project.samples.length}})
@@ -36,8 +40,8 @@
             </a>
 
             <a class="btn btn-default btn-notes minimized-window"
-                    ng-show="isMinimized('notes')"
-                    ng-click="openPanel('notes')">
+               ng-show="isMinimized('notes')"
+               ng-click="openPanel('notes')">
                 <span>
                     <i class="fa fa-fw fa-edit bold"></i>
                     Notes ({{project.notes.length}})
@@ -45,14 +49,17 @@
             </a>
 
             <a class="btn btn-default btn-processes minimized-window"
-                    ng-show="isMinimized('processes')"
-                    ng-click="openPanel('processes')">
+               ng-show="isMinimized('processes')"
+               ng-click="openPanel('processes')">
                 <span>
                     <i class="fa fa-fw fa-code-fork bold"></i>
                     Processes
                 </span>
             </a>
         </div>
+    </div>
+    <div class="row" ng-show="showSettings" style="padding-left: 15px">
+        <project-settings project="project"></project-settings>
     </div>
     <div class="row">
         <div ng-show="!isColumnActive('column1')">
