--- a/website/app/index.html
+++ b/website/app/index.html
@@ -182,6 +182,7 @@
 <script src="application/core/projects/project/sideboard-controller.js"></script>
 <script src="application/core/projects/project/project-settings.js"></script>
 <script src="application/core/projects/project/project-controller.js"></script>
+<script src="application/core/projects/project/project-task-bar.js"></script>
 <script src="application/core/projects/project/breadcrumbs-directive.js"></script>
 <script src="application/core/projects/project/project-action-bar.js"></script>
 <script src="application/core/projects/project/project-search-bar.js"></script>
