--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-xs-4">
             <div class="list-group sidebar-list" style="margin-left: 10px;">
-                <div class="list-group-item sidebar-action" style="padding-top: 8px; padding-bottom: 8px">
-                    <a style="color: white" ng-click="showProjects = !showProjects">
+                <div class="list-group-item sidebar-action" style="padding-top: 4px; padding-bottom: 4px">
+                    <a style="color: white;" ng-click="showProjects = !showProjects">
                         <i class="fa fa-fw fa-briefcase"></i> {{project.name | truncate: 40: '...'}}
                         <i class="fa"
                            ng-class="{'fa-chevron-right': !showProjects, 'fa-chevron-down': showProjects}"></i>
