--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div ng-if="loaded">
-        <div class="row" style="background-color: #3e4b5c; padding-top: 5px; border-top: 1px solid black; border-bottom: 2px solid #c5c5c6">
+        <div class="row" style="background-color: #3e4b5c; padding-top: 5px; border-top: 1px solid black; border-bottom: 2px solid #c5c5c6;">
             <project-task-bar
                 project="project"
                 projects="projects">
