--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -40,10 +40,15 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="col-xs-2">
-                <a ng-click="openPanel('settings')">
+                <a ng-click="openProvWizard()" title="Provenance Wizard">
+                    <i class="fa fa-fw fa-2x fa-magic"
+                       ng-class="{inactive: !showPanel('provwizard')}">
+                    </i>
+                </a>
+                <a ng-click="openPanel('settings')" title="Project Settings">
                     <i class="fa fa-fw fa-2x fa-gear" ng-class="{inactive: !showPanel('settings')}"></i>
                 </a>
-                <a ng-click="openPanel('calendar')">
+                <a ng-click="openPanel('calendar')" title="Event Calendar">
                     <i class="fa fa-fw fa-2x fa-calendar" ng-class="{inactive: !showPanel('calendar')}"></i>
                 </a>
             </div>
